fix: show items on tablet

--- a/practices/practice-one/src/assets/stylesheets/components/_book.scss
+++ b/practices/practice-one/src/assets/stylesheets/components/_book.scss
@@ -271,6 +271,10 @@
     }
 
     @include only-for-tablet() {
+      flex-basis: calc(50% - 22px);
+    }
+
+    @include only-for-desktop() {
       flex-basis: calc(33.33333333% - 22px);
     }
   }
